--- a/Status_Updates/Status_Updates/Base.lproj/MainMenu.xib
+++ b/Status_Updates/Status_Updates/Base.lproj/MainMenu.xib
@@ -17,6 +17,7 @@
         <customObject id="YGR-iV-2qE" customClass="StatusMenuController" customModule="Status_Updates" customModuleProvider="target">
             <connections>
                 <outlet property="statusMenu" destination="Wjy-0a-9D3" id="4U3-vc-b3f"/>
+                <outlet property="weatherItem" destination="4MN-1p-6jR" id="bfZ-fN-dml"/>
             </connections>
         </customObject>
         <menu id="Wjy-0a-9D3">
@@ -28,6 +29,10 @@
                     </connections>
                 </menuItem>
                 <menuItem isSeparatorItem="YES" id="scS-4R-sh2"/>
+                <menuItem title="Weather" id="4MN-1p-6jR">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                </menuItem>
+                <menuItem isSeparatorItem="YES" id="5P6-Mx-tCF"/>
                 <menuItem title="Quit" id="9id-dW-5ea">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
