--- a/Status_Updates/Status_Updates/Base.lproj/MainMenu.xib
+++ b/Status_Updates/Status_Updates/Base.lproj/MainMenu.xib
@@ -22,7 +22,7 @@
         </customObject>
         <menu id="Wjy-0a-9D3">
             <items>
-                <menuItem title="Update" id="Iho-CS-Gat">
+                <menuItem title="Refresh" id="Iho-CS-Gat">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
                         <action selector="updateClicked:" target="YGR-iV-2qE" id="cXC-DI-YEw"/>
